[project]
name = "oxy-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.18.2",
    "dash-ag-grid==31.3.0",
    "dash-bootstrap-components==1.7.1",
    "plotly==6.0.0",
    "polars[excel]==1.21.0",
    "scipy==1.15.1",
]
